# dashboard

./: README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/src/: api.rs  blockfrost.rs  config.rs  db.rs  main.rs  registry.rs  utxorpc.rs
frontend/: .cta.json  biome.json  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: routeTree.gen.ts  router.tsx  styles.css
frontend/src/components/: Footer.tsx  Header.tsx  ThemeToggle.tsx
frontend/src/components/ui/: button.tsx
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/txs/: $hash.tsx  index.tsx
